2008-10-17  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_otf_features): Fix indexing
	gsub_gpos->FeatureList.Feature.  Check the validity of indices.

2008-10-16  Magnus Henoch  <mange@freemail.hu>

	* dbusbind.c (Fdbus_call_method): Unbreak usage line.
	(Fdbus_call_method_asynchronously): Ditto.
	This change makes C-h f display the argument list.

2008-10-16  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Fexpand_file_name): Doc fix.

	* xfaces.c (Finternal_set_lisp_face_attribute): Make null values
	of :foreground and :background equivalent to unspecified (20.x
	compatibility).

2008-10-15  Eli Zaretskii  <eliz@gnu.org>

	* buffer.c (syms_of_buffer): Doc fix.

2008-10-14  Kenichi Handa  <handa@m17n.org>

	* font.c (font_clear_prop): When clearing font width, clear the
	average width field too.

2008-10-12  Andreas Schwab  <schwab@suse.de>

	* ftfont.c (ftfont_shape_by_flt): Make static.
	* ftfont.h (ftfont_shape_by_flt): Don't declare.

	* font.c: Don't include <m17n-flt.h>.

2008-10-10  Eli Zaretskii  <eliz@gnu.org>

	* s/msdos.h (SYSTEM_PURESIZE_EXTRA): Decrease to 10000.

2008-10-09  Eli Zaretskii  <eliz@gnu.org>

	* frame.c (make_terminal_frame) [MSDOS]: Remove unused #ifdef'ed
	away code.

2008-10-09  Chong Yidong  <cyd@stupidchicken.com>

	* dispnew.c (update_text_area): Avoid looping due to large glyph
	overhangs (bug#1070).

2008-10-09  Kenichi Handa  <handa@m17n.org>

	* fontset.c (face_for_char): If face->fontset is negative, just
	return ascii_face.

	* font.c (font_delete_unmatched): Fix previous change.  Don't
	reject an entity if DPI and AVGWIDTH of an entity are 0.

2008-10-09  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (Fraise_frame): On text-only terminals select frame in
	order to make it visible.  (Bug#1061)

2008-10-08  Chong Yidong  <cyd@stupidchicken.com>

	* fontset.c (fontset_find_font): Check frame validity.

2008-10-07  Chong Yidong  <cyd@stupidchicken.com>

	* gtkutil.c (xg_display_open): Reset default display if none